fazendo pequenos ajustes

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
-  <title>CursoAngularPortfolio</title>
+  <title>Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta property="og:image" content="https://github.com/dani3434/meu-portfolio/blob/master/src/assets/portfolio.png">
+  <meta property="description" content=" Olá! Meu nome é Daniel e estou atualmente cursando Análise e Desenvolvimento de Sistemas. Estou apaixonado pelo mundo da programação e em constante busca por novos desafios na área de desenvolvimento web.">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
